recallable/tests/ui/model_fail_enum_skip_variant.stderr
error: `#[recallable_model]` on enums requires assignment-only variants; complex enums should derive `Recallable` and implement `Recall` or `TryRecall` manually
 --> tests/ui/model_fail_enum_skip_variant.rs:4:6
  |
4 | enum InvalidModelSkippedEnum {
  |      ^^^^^^^^^^^^^^^^^^^^^^^
